--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>To-do Clone</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
+    <ul class="todo-list">
+      <li>LISTA DELLA SPESA</li>
+    </ul>
+
+    <label for="aggiungi">Aggiungi elemento</label>
+    <input id="aggiungi" type="text" placeholder="Aggiungi elemento">
+
+    <div class="template">
+      <li> <span class="todo-list-elimina">X</span></li>
+    </div>
 
     <script src='js/script.js'></script>
   </body>
